Fixed small layout issue on daycare search mobile layout

--- a/public/themes/custom/hdbt_subtheme/src/scss/06_components/paragraphs/_unit-search-variants.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06_components/paragraphs/_unit-search-variants.scss
@@ -62,9 +62,11 @@ $card_spacing: $spacing-and-half;
 
       // Sort by distance to an address
       &:first-child {
-        margin-right: 30%;
         margin-top: 0;
-        width: 70%;
+        @include breakpoint($breakpoint-m) {
+          margin-right: 30%;
+          width: 70%;
+        }
       }
     }
   }
